--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html dir="rtl">
 
 <head>
-    <title>Auto Complete</title>
+
+    <title> الاكمال التلقائي</title>
 
     <!-- Tailwind -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.4/base.min.css">
@@ -23,17 +24,17 @@
                 <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
                     <h1
                         class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
-                        Start typing to see suggestions...
+                        ابدأ بالكتابة لرؤية الاقتراحات...
                     </h1>
                     <div class="space-y-4 md:space-y-6">
                         <div class="autocomplete">
                             <input type="text" name="autoTextField" id="autoTextField" onload="fetchSuggestions(this)"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                placeholder="input...">
+                                placeholder="اكتب هنا...">
 
                         </div>
                         <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                            By Ibraheem Alyan, Saleh Khatib, Feras Sandouka
+                            ابراهيم عليان، صالح الخطيب، فراس صندوقة
                         </p>
                     </div>
                 </div>
